# raytrace

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: point.h  tuple.h  vector.h
tests/: point.cpp  tuple.cpp  vector.cpp
